--- a/Oekonomie.qmd
+++ b/Oekonomie.qmd
@@ -1,1 +1,46 @@
 # Ökonomie
+
+
+- Die Zukunft ergibt sich (auch) als Ergebnis menschlichen Verhaltens. 
+
+- Menschen verhalten sich in sozialen Kontexten
+
+- Bewährte Analyseidee, die in der Ökoniomik genutzt wird: Soziale Phänomene als Ergebnis individuellen Handelns
+
+  - Individuen verfolgen Ziele und reagieren auf Anreize
+  - Anreize folgen aus dem Verhalten anderer Individuen und aus den sogenannten Rahmenbedingungen
+  \(\rightarrow\) Rahmenbedingungen nehmen Einfluss auf Verhalten
+
+  - Gleichgewichte \(\rightarrow\) Tendenzen beschreiben/erklären/verändern 
+
+
+
+- Generelle Methode, auf viele Phänomene anwendbar
+
+  - Unternehmensstrategien
+  - Konsumentenverhalten
+  - Lernverhalten
+  - Politische Entscheidungen
+  - ...
+  
+
+
+- Ökonomik ist eine Sozialwissenschaft, die unter Berücksichtigung von Knappheit systematische Effekte untersucht von:  
+    - Handlungsbegrenzungen auf individuelle Entscheidungen
+    - individueller Entscheidungen auf soziale Phänomene
+
+
+
+- Weiter Begriff von Knappheit  
+  - Ressourcen
+  - Zeit
+  - Information
+  - Fähigkeiten
+  - $\dots$
+
+
+  
+- Verhalten ändern:
+
+  - Verhalten verstehen
+  - Ansatzpunkte für Veränderungen finden (Informationen, Anreize, Verbote, $\dots$)
