Code Folding, Githb-Link

--- a/Zukunft.qmd
+++ b/Zukunft.qmd
@@ -23,7 +23,7 @@
 
 -   Arbeitshypothese: Vielleicht besteht dieser Zusammenhang fort
 
-```{r echo=F, message=F, warning=F, cache=T}
+```{r echo=T, message=F, warning=F, cache=T, cache.comments=FALSE}
 
 # knitr::opts_chunk$set(dev = 'svg') # set output device to svg
 
@@ -41,8 +41,6 @@ mydata <- get_eurostat("nama_10_gdp",
          unit =="Chain linked volumes (2015), million euro",
          geo==c("Germany")
          )
-# Name für Germany kürzen
-# mydata$geo[mydata$geo=="Germany (until 1990 former territory of the FRG)"] <- "Germany"
 
 
 model1 <- lm(values ~ TIME_PERIOD + I(TIME_PERIOD^2), data=mydata)
@@ -55,7 +53,7 @@ temp_var <- predict(model1, interval="prediction")
 mydata <- cbind(mydata, temp_var)
 ```
 
-```{r echo=F, warning=F, message=F, cache=F}
+```{r echo=T, warning=F, message=F, cache=F}
 
 library(tidyverse)
 
@@ -94,7 +92,6 @@ geom_line(aes(y=upr), color = "red", linetype = "dashed")+
   theme(axis.line = element_line(arrow = arrow(type='closed', length = unit(5,'pt'))))+
   labs(#fill="Index",
        title="Prognoseunsicherheit",
-       #subtitle= "Anteil am BIP, 2020",
        x="Zeit", y='Werte',
        caption = paste('Illustration: Jan S. Voßwinkel, 2024'))
 
@@ -132,7 +129,7 @@ geom_line(aes(y=upr), color = "red", linetype = "dashed")+
 
 ```
 
-```{r echo=F, warning=F, message=F, cache=T}
+```{r echo=T, warning=F, message=F, cache=T}
 
 p +
   coord_cartesian(xlim = c(1990, 2023), ylim=c(min(mydata$values), max(mydata$values)))
@@ -143,7 +140,7 @@ p +
 -   Regelmäßiger Prozess
 -   Erkennbarer Trend
 
-```{r echo=F, warning=F, message=F, cache=T}
+```{r echo=T, warning=F, message=F, cache=T}
 
 p2
 
@@ -151,7 +148,7 @@ p2
 
 -   Wie geht es weiter?
 
-```{r echo=F, warning=F, message=F, cache=T}
+```{r echo=T, warning=F, message=F, cache=T}
 
 p
 ```
@@ -191,7 +188,7 @@ $\rightarrow$ Ökonomische Analyse sozialer Phänomene
 
 ### Teile der Zukunft sind bereits vergangen
 
-```{r echo=F, warning=F, message=F, cache=T}
+```{r echo=T, warning=F, message=F, cache=T}
 library(tidyverse)
 
 # Funktionen definieren
@@ -278,10 +275,10 @@ $\rightarrow$ Teile der Zukunft sind nicht mehr änderbar
 
 ## Lebenserwartung
 
-```{r echo=F, warning=F, message=F}
+```{r echo=T, warning=F, message=F}
 
 library(tidyverse)
-library(owidR)
+#library(owidR)
 
 df <- read.csv(file='life-expectancy.csv')
 
@@ -299,7 +296,7 @@ df %>% filter(Entity=="World") %>%
 
 ## Bevölkerung
 
-```{r echo=F, warning=F, message=F}
+```{r echo=T, warning=F, message=F}
 
 df <- read.csv(file='population.csv')
 
@@ -320,7 +317,7 @@ df %>% filter(Entity=="World") %>%
 
 ## Wirtschaftskraft
 
-```{r echo=F, warning=F, message=F}
+```{r echo=T, warning=F, message=F}
 
 df <- read.csv(file='maddison-data-gdp-per-capita-in-2011us-single-benchmark.csv')
 
@@ -349,7 +346,7 @@ df %>% filter(Entity=="France") %>%
 
 ## THG-Emmissionen
 
-```{r echo=F, warning=F, message=F}
+```{r echo=T, warning=F, message=F}
 
 df <- read.csv('climate-change.csv')
 
@@ -394,7 +391,7 @@ df %>% filter(Entity=="World",
 
 ```{r echo=F, message=FALSE, warning=FALSE, cache=F, eval=F, include=F}
 library(tidyverse)
-library(owidR)
+#library(owidR)
 
 df <- owid("temperature-anomaly")
 
