Korrektur Themen Zukunft

--- a/Zukunft.qmd
+++ b/Zukunft.qmd
@@ -265,7 +265,7 @@ $\rightarrow$ Teile der Zukunft sind nicht mehr änderbar
 
 ### Migration und Integration
 
-### Ökonomische und politische Polarisierung\*\*
+### Ökonomische und politische Polarisierung
 
 ### Demokratie und Menschenrechte
 
